# git_practice

./: CHANGELOG.md  CITATION.cff  GITHUB_OUTPUT  README.md  fasttree.py  feature.txt  pyproject.toml  test.py  test.txt  test_fasttree.py
.github/workflows/: CD1-version_check.yml  CI1-pytest_versions.yml  build-fasttree.yml  build_and_test.yml  publish_release.yml  pytest_versions.yml  release.yml  update_release_tag.yml  version_bump.yml  version_check.yml
src/testpkg/: __main__.py
tests/: func_test.py  tree.nw
