[build-system]
requires = ["setuptools>=61.0", "pytest>=6.0", "versioningit"]
build-backend = "setuptools.build_meta"

[project]
name = "testpkg"
authors = [
  { name = "Cheng-Hung Tsai", email = "chenghung.tsai@email.ucr.edu" },
]
maintainers = [
  { name = "Cheng-Hung Tsai", email = "chenghung.tsai@email.ucr.edu" },
]
description = "Just a test package."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.scripts]
phyling = "testpkg.__main__:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.0"
